[#246] Fixed styling on smallprint in article list so that line-height is actually set.  Tested on BlackBerry and BBplus devices.

--- a/mobi-web/news/Basic/list.css
+++ b/mobi-web/news/Basic/list.css
@@ -6,3 +6,7 @@
 .story-link {
     text-decoration: none;
 }
+
+.smallprint {
+	display: inline-block;
+}
